--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.8.0+1
   equatable: ^2.0.7
+  flutter_otp_text_field: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
