--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter_otp_text_field: ^1.5.1+1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
